--- a/MVCTVManagerProject/Views/Home/Index.cshtml
+++ b/MVCTVManagerProject/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
+﻿@using TVManager_Domain
+@model IList<TVShow>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="display-4">
+    @foreach(var tvShow in Model)
+{
+    <div class="col mb-5">
+        <div class="card h-100">
+            <!-- Product image-->
+            <img class="card-img-top" src=@tvShow.Attachment.Path alt="..." />
+            <!-- Product details-->
+            <div class="card-body p-4">
+                <div class="text-center">
+                    <!-- Product name-->
+                    <h5 class="fw-bolder">@tvShow.Title</h5>
+                    <!-- Product price-->
+                    <a>@tvShow.URL</a>
+                </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Show Details</a></div>
+            </div>
+        </div>
+    </div>
+}
+
 </div>
